unpackaged/main/default/objects/Product2/fields/MDM_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>MDM_Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>CMM</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>GPO</fullName>
            </value>
            <value>
                <fullName>Ontada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>