unpackaged/main/default/objects/Product2/fields/MDM_Component_Acronym__c.field-meta.xml
<CustomField>
    <fullName>MDM_Component_Acronym__c</fullName>
    <label>Component Acronym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>