unpackaged/main/default/objects/Product2/fields/MDM_Component_Category__c.field-meta.xml
<CustomField>
    <fullName>MDM_Component_Category__c</fullName>
    <description>Created as part of SAL-623  for Sales Rep to Assign Component Category to the components.so that I can organize and categorize components effectively</description>
    <label>Component Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Component</fullName>
            </value>
            <value>
                <fullName>Paid Component</fullName>
            </value>
            <value>
                <fullName>Service Option</fullName>
            </value>
            <value>
                <fullName>Included Feature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>