unpackaged/main/default/objects/Product2/fields/MDM_Component_Documentation_Link__c.field-meta.xml
<CustomField>
    <fullName>MDM_Component_Documentation_Link__c</fullName>
    <label>Component Documentation Link</label>
    <type>Url</type>
</CustomField>