unpackaged/main/default/objects/Product2/fields/MDM_Component_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>MDM_Component_Market_Segment__c</fullName>
    <label>Component Market Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biopharma</fullName>
            </value>
            <value>
                <fullName>Chain Pharmacy</fullName>
            </value>
            <value>
                <fullName>Outpatient Pharmacy</fullName>
            </value>
            <value>
                <fullName>Independent Pharmacy</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Pharmacy Benefit Manager</fullName>
            </value>
            <value>
                <fullName>Cash Discount Card Company</fullName>
            </value>
            <value>
                <fullName>Retail Pharmacy</fullName>
            </value>
            <value>
                <fullName>Physician Vendor</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Medical Supply Vendor</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>GPO</fullName>
            </value>
            <value>
                <fullName>Telehealth</fullName>
            </value>
            <value>
                <fullName>Health System</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>