unpackaged/main/default/objects/Product2/fields/MDM_Component_Marketing_Link__c.field-meta.xml
<CustomField>
    <fullName>MDM_Component_Marketing_Link__c</fullName>
    <label>Component Marketing Link</label>
    <type>Url</type>
</CustomField>