unpackaged/main/default/objects/Product2/fields/MDM_Component_Marketing_Manager_EID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Component_Marketing_Manager_EID__c</fullName>
    <label>Component Marketing Manager EID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>