unpackaged/main/default/objects/Product2/fields/MDM_Component_Other_Names__c.field-meta.xml
<CustomField>
    <fullName>MDM_Component_Other_Names__c</fullName>
    <description>Alternate/historical names of components. Semicolon delimited.</description>
    <label>Component Other Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>