unpackaged/main/default/objects/Product2/fields/MDM_Component_Requirements__c.field-meta.xml
<CustomField>
    <fullName>MDM_Component_Requirements__c</fullName>
    <label>Component Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>