unpackaged/main/default/objects/Product2/fields/MDM_Component_SME_EID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Component_SME_EID__c</fullName>
    <label>Component SME EID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>