unpackaged/main/default/objects/Product2/fields/MDM_Component_SME_Name__c.field-meta.xml
<CustomField>
    <fullName>MDM_Component_SME_Name__c</fullName>
    <label>Component SME Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>