unpackaged/main/default/objects/Product2/fields/MDM_ContractingEntity__c.field-meta.xml
<CustomField>
    <fullName>MDM_ContractingEntity__c</fullName>
    <label>ContractingEntity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>