unpackaged/main/default/objects/Product2/fields/MDM_Core_Service__c.field-meta.xml
<CustomField>
    <fullName>MDM_Core_Service__c</fullName>
    <label>Target Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3PL Non-Title</fullName>
            </value>
            <value>
                <fullName>3PL Title</fullName>
            </value>
            <value>
                <fullName>AMP</fullName>
            </value>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>CoPay</fullName>
            </value>
            <value>
                <fullName>Core Hub</fullName>
            </value>
            <value>
                <fullName>Core Hub - Other</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>eVoucher</fullName>
            </value>
            <value>
                <fullName>eVoucher - Other</fullName>
            </value>
            <value>
                <fullName>GPO</fullName>
            </value>
            <value>
                <fullName>HubExpress</fullName>
            </value>
            <value>
                <fullName>Ontada</fullName>
            </value>
            <value>
                <fullName>PA +</fullName>
            </value>
            <value>
                <fullName>PA + Other</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Program Pharmacy</fullName>
            </value>
            <value>
                <fullName>Program Pharmacy - Other</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>