unpackaged/main/default/objects/Product2/fields/MDM_Est_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>MDM_Est_Profit_Margin__c</fullName>
    <label>Estimated Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>