unpackaged/main/default/objects/Product2/fields/MDM_Fee_Acronymn__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_Acronymn__c</fullName>
    <label>Fee Acronym</label>
    <length>100</length>
    <type>Text</type>
</CustomField>