unpackaged/main/default/objects/Product2/fields/MDM_Fee_Cadence__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_Cadence__c</fullName>
    <label>Fee Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Recurring</fullName>
            </value>
            <value>
                <fullName>Non-Recurring Per Each</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Recurring Per Each</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>