unpackaged/main/default/objects/Product2/fields/MDM_Fee_Description__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_Description__c</fullName>
    <label>Fee Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>