unpackaged/main/default/objects/Product2/fields/MDM_Fee_Family__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_Family__c</fullName>
    <label>Fee Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Subscription Based</fullName>
            </value>
            <value>
                <fullName>Usage Based</fullName>
            </value>
            <value>
                <fullName>Passthrough</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>