unpackaged/main/default/objects/Product2/fields/MDM_Fee_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_ID__c</fullName>
    <label>Fee ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>