unpackaged/main/default/objects/Product2/fields/MDM_Fee_Interval__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_Interval__c</fullName>
    <label>Fee Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>One Time Per Each</fullName>
            </value>
            <value>
                <fullName>Monthly Per Usage</fullName>
            </value>
            <value>
                <fullName>One Time Per Spec</fullName>
            </value>
            <value>
                <fullName>Monthly Per Spec</fullName>
            </value>
            <value>
                <fullName>Monthly Per Each</fullName>
            </value>
            <value>
                <fullName>As Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>