unpackaged/main/default/objects/Product2/fields/MDM_Fee_Min_PPU__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_Min_PPU__c</fullName>
    <label>MinimumPPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>