unpackaged/main/default/objects/Product2/fields/MDM_Fee_Revenue_Category__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_Revenue_Category__c</fullName>
    <label>Fee Revenue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>SUI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>