unpackaged/main/default/objects/Product2/fields/MDM_Fee_Revenue_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_Revenue_Subcategory__c</fullName>
    <label>Fee Revenue Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR-ST</fullName>
            </value>
            <value>
                <fullName>ER-ST</fullName>
            </value>
            <value>
                <fullName>MIN-PRC</fullName>
            </value>
            <value>
                <fullName>MIN-VOL</fullName>
            </value>
            <value>
                <fullName>MRC-ONE</fullName>
            </value>
            <value>
                <fullName>MRC-SPC</fullName>
            </value>
            <value>
                <fullName>MRC-STD</fullName>
            </value>
            <value>
                <fullName>MRC-YR</fullName>
            </value>
            <value>
                <fullName>SUI-SPC</fullName>
            </value>
            <value>
                <fullName>SUI-STD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>