unpackaged/main/default/objects/Product2/fields/MDM_Fee_Standard_PPI__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_Standard_PPI__c</fullName>
    <label>Fee Standard Price Per Inteval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>