unpackaged/main/default/objects/Product2/fields/MDM_Fee_Std_Qty__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_Std_Qty__c</fullName>
    <label>Fee Standard Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>