unpackaged/main/default/objects/Product2/fields/MDM_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_Type__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-standard</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>