unpackaged/main/default/objects/Product2/fields/MDM_Fee_UofM__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fee_UofM__c</fullName>
    <label>Fee Unit of Measure</label>
    <type>TextArea</type>
</CustomField>