unpackaged/main/default/objects/Product2/fields/MDM_FeePrerequisits__c.field-meta.xml
<CustomField>
    <fullName>MDM_FeePrerequisits__c</fullName>
    <label>FeePrerequisits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>