unpackaged/main/default/objects/Product2/fields/MDM_Forecasting_System__c.field-meta.xml
<CustomField>
    <fullName>MDM_Forecasting_System__c</fullName>
    <label>Current Forecasting System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>