unpackaged/main/default/objects/Product2/fields/MDM_HighspotLink__c.field-meta.xml
<CustomField>
    <fullName>MDM_HighspotLink__c</fullName>
    <label>HighspotLink</label>
    <type>Url</type>
</CustomField>