unpackaged/main/default/objects/Product2/fields/MDM_Invoicing_System__c.field-meta.xml
<CustomField>
    <fullName>MDM_Invoicing_System__c</fullName>
    <label>Current Invoicing System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>