unpackaged/main/default/objects/Product2/fields/MDM_Legacy_BU__c.field-meta.xml
<CustomField>
    <fullName>MDM_Legacy_BU__c</fullName>
    <label>Legacy Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RxC</fullName>
            </value>
            <value>
                <fullName>RHP</fullName>
            </value>
            <value>
                <fullName>CMM</fullName>
            </value>
            <value>
                <fullName>ONT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>