unpackaged/main/default/objects/Product2/fields/MDM_Master_Record_type__c.field-meta.xml
<CustomField>
    <fullName>MDM_Master_Record_type__c</fullName>
    <label>Master Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>