unpackaged/main/default/objects/Product2/fields/MDM_Netsuite_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Netsuite_Product_ID__c</fullName>
    <label>Netsuite Product ID</label>
    <type>TextArea</type>
</CustomField>