unpackaged/main/default/objects/Product2/fields/MDM_Parent_Organization__c.field-meta.xml
<CustomField>
    <fullName>MDM_Parent_Organization__c</fullName>
    <label>Parent Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>McK US</fullName>
            </value>
            <value>
                <fullName>PSAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>