unpackaged/main/default/objects/Product2/fields/MDM_Pricing_Team__c.field-meta.xml
<CustomField>
    <fullName>MDM_Pricing_Team__c</fullName>
    <label>Pricing Team</label>
    <type>TextArea</type>
</CustomField>