unpackaged/main/default/objects/Product2/fields/MDM_Problems_Solved__c.field-meta.xml
<CustomField>
    <fullName>MDM_Problems_Solved__c</fullName>
    <label>Problems Solved</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>