unpackaged/main/default/objects/Product2/fields/MDM_Profit_Center_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Profit_Center_ID__c</fullName>
    <label>Profit Center ID</label>
    <type>TextArea</type>
</CustomField>