unpackaged/main/default/objects/Product2/fields/MDM_Profit_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>MDM_Profit_Center_Name__c</fullName>
    <label>Profit Center Name</label>
    <type>TextArea</type>
</CustomField>