unpackaged/main/default/objects/Product2/fields/MDM_SAP_Material_Code__c.field-meta.xml
<CustomField>
    <fullName>MDM_SAP_Material_Code__c</fullName>
    <label>SAP Material Code</label>
    <type>TextArea</type>
</CustomField>