unpackaged/main/default/objects/Product2/fields/MDM_Service_Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Bundle_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Service</fullName>
            </value>
            <value>
                <fullName>Partial Service</fullName>
            </value>
            <value>
                <fullName>Bundled Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>