unpackaged/main/default/objects/Product2/fields/MDM_Service_Category__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Category__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjudicated Pharmacy</fullName>
            </value>
            <value>
                <fullName>Claims Network</fullName>
            </value>
            <value>
                <fullName>Clinical Trial</fullName>
            </value>
            <value>
                <fullName>Commercial Pharmacy</fullName>
            </value>
            <value>
                <fullName>Digital Pharmacy</fullName>
            </value>
            <value>
                <fullName>Electronic Prior Authorization</fullName>
            </value>
            <value>
                <fullName>Fee For Service Billing</fullName>
            </value>
            <value>
                <fullName>Free Goods</fullName>
            </value>
            <value>
                <fullName>Hub Services</fullName>
            </value>
            <value>
                <fullName>Innovation Roadmap</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pass Through Billing</fullName>
            </value>
            <value>
                <fullName>Patient Financial Assistance</fullName>
            </value>
            <value>
                <fullName>Payer Products</fullName>
            </value>
            <value>
                <fullName>Pharma Group Purchasing</fullName>
            </value>
            <value>
                <fullName>Pharmacy Automation</fullName>
            </value>
            <value>
                <fullName>Pharmacy Network</fullName>
            </value>
            <value>
                <fullName>Prescriber Support</fullName>
            </value>
            <value>
                <fullName>Prescription Decision Support</fullName>
            </value>
            <value>
                <fullName>Provider Engagement</fullName>
            </value>
            <value>
                <fullName>Provider Solutions</fullName>
            </value>
            <value>
                <fullName>Real-World Data</fullName>
            </value>
            <value>
                <fullName>Real-World Research</fullName>
            </value>
            <value>
                <fullName>Safety Monitoring</fullName>
            </value>
            <value>
                <fullName>Supply Chain Solutions</fullName>
            </value>
            <value>
                <fullName>Therapy Adherence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>