unpackaged/main/default/objects/Product2/fields/MDM_Service_Category_Acronym__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Category_Acronym__c</fullName>
    <label>Service Category Acronym</label>
    <length>100</length>
    <type>Text</type>
</CustomField>