unpackaged/main/default/objects/Product2/fields/MDM_Service_Channel__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access &amp; Adherence</fullName>
            </value>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>GPO</fullName>
            </value>
            <value>
                <fullName>Life Sciences Solutions</fullName>
            </value>
            <value>
                <fullName>Pharmacy &amp; Affordability</fullName>
            </value>
            <value>
                <fullName>Provider Solutions</fullName>
            </value>
            <value>
                <fullName>Affordability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>