unpackaged/main/default/objects/Product2/fields/MDM_Service_Description__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Description__c</fullName>
    <label>Service Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>