unpackaged/main/default/objects/Product2/fields/MDM_Service_Documentation_Link__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Documentation_Link__c</fullName>
    <label>Service Documentation Link</label>
    <type>Url</type>
</CustomField>