unpackaged/main/default/objects/Product2/fields/MDM_Service_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_ID__c</fullName>
    <label>Service ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>