unpackaged/main/default/objects/Product2/fields/MDM_Service_Marketing_Link__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Marketing_Link__c</fullName>
    <label>Service Marketing Link</label>
    <type>Url</type>
</CustomField>