unpackaged/main/default/objects/Product2/fields/MDM_Service_Marketing_Manager_EID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Marketing_Manager_EID__c</fullName>
    <label>Service Marketing Manager EID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>