unpackaged/main/default/objects/Product2/fields/MDM_Service_Marketing_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Marketing_Manager_Name__c</fullName>
    <label>Service Marketing Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>